--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-     "start": "nodemon --env-file=.env src/backend/index.js"
+    "start": "nodemon --env-file=.env src/backend/index.js"
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -20,6 +20,7 @@
     "nodemon": "^3.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
