root changed for db

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Complain_system",
+  "name": "asipiya-ticket-manager",
   "private": true,
   "version": "0.0.0",
   "type": "module",
