--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "nodemon --env-file=.env src/backend/index.js"
+    "start": "nodemon src/backend/index.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
