--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^3.14.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "tailwindcss": "^4.1.7"
