--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
