--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EMAIL_USER=
-EMAIL_PASS=
+EMAIL_USER=sithubaba09@gmail.com
+EMAIL_PASS=nbuz ebon rbgh cdhv
 
 APP_URL=http://localhost:5173/register
