--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^5.1.0",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.512.0",
     "moment": "^2.30.1",
     "multer": "^2.0.0",
     "mysql": "^2.18.1",
