--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^2.2.0",
     "chart.js": "^4.4.9",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "formik": "^2.4.6",
