comments add funtion with tag person

--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "@tailwindcss/vite": "^4.1.7",
+    "@tinymce/tinymce-react": "^6.2.1",
+    "@tiptap/extension-mention": "^2.14.0",
+    "@tiptap/pm": "^2.14.0",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
