--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.29.1",
     "tailwindcss": "^4.1.7",
