--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
