--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-mentions": "^4.4.10",
     "react-router-dom": "^7.6.1",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
