--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^4.4.9",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "docx-preview": "^0.3.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "formik": "^2.4.6",
@@ -36,6 +37,7 @@
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
     "pdfjs-dist": "^5.3.31",
+    "pptxjs": "^0.0.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
@@ -50,7 +52,8 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.7",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
